# cyclos-staking

./: .env  .gitignore  Anchor.toml  README.md  package.json
programs/reward-pool/: Cargo.toml
programs/reward-pool/src/: lib.rs
src/: createPool.js  demo-config.json  devnet-config.json  fund.js  mainnet-config.json  utils.js
tests/: reward-pool.js
