[package]
name = "reward-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_pool"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

#add to default for local testing
#default = ["local-testing"]
local-testing = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
solana-program = "1.8.5"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
